Fix style on mobile

--- a/public/css/ddstyle.css
+++ b/public/css/ddstyle.css
@@ -177,7 +177,10 @@ img.dd-logo {
   margin: 2em 0;
 }
 
-@media (max-height : 675px) {
+
+@media only screen 
+and (min-width : 320px) 
+and (max-width : 675px) {
   .dd-header h1 {
     font-size: 56px;
     letter-spacing: 10px;
@@ -192,9 +195,11 @@ img.dd-logo {
   }
 }
 
-@media (min-width : 375px) and (max-width : 667px) {
+@media only screen 
+and (min-width : 320px) 
+and (max-width : 480px) {
   .dd-header h1 {
-    font-size: 36px;
+    font-size: 28px;
     letter-spacing: 10px;
   }
 
@@ -266,6 +271,7 @@ img.dd-logo {
     padding: 0 2em;
     width: 100%;
     margin: 128px 2em 0 2em;
+    max-width: 90%;
   }
 
   .dd-page {
@@ -273,7 +279,12 @@ img.dd-logo {
   }
 
   .dd-page-title {
-    padding: 1em 0;
+    padding: .5em 0;
+    font-size: 28px;
+  }
+
+  .post-title {
+    font-size: 22px;
   }
 }
 
